; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/uart/extr_uart_core.c_uart_getname.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/uart/extr_uart_core.c_uart_getname.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.uart_class = type { i8* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @uart_getname(%struct.uart_class* %0) #0 {
  %2 = alloca %struct.uart_class*, align 8
  store %struct.uart_class* %0, %struct.uart_class** %2, align 8
  %3 = load %struct.uart_class*, %struct.uart_class** %2, align 8
  %4 = icmp ne %struct.uart_class* %3, null
  br i1 %4, label %5, label %9

5:                                                ; preds = %1
  %6 = load %struct.uart_class*, %struct.uart_class** %2, align 8
  %7 = getelementptr inbounds %struct.uart_class, %struct.uart_class* %6, i32 0, i32 0
  %8 = load i8*, i8** %7, align 8
  br label %10

9:                                                ; preds = %1
  br label %10

10:                                               ; preds = %9, %5
  %11 = phi i8* [ %8, %5 ], [ null, %9 ]
  ret i8* %11
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
